@@ -5,69 +5,96 @@
  * @author   genify(caijf@corp.netease.com)
  * ------------------------------------------
  */
-var f = function(){
-    var _  = NEJ.P,
-        _o = NEJ.O,
-        _e = _('nej.e'),
-        _u = _('nej.u'),
-        _v = _('nej.v'),
-        _x = _('nej.x'),
-        _p = _('nej.ut'),
-        _pro;
-    if (!!_p._$$Tab) return;
+NEJ.define([
+    'base/global',
+    'base/event',
+    'base/util',
+    'base/element',
+    'util/event'
+],function(NEJ,_v,_u,_e,_t,_p,_o,_f,_r){
+    var _pro;
     /**
-     * 标签切换控件封装<br />
-     * 页面结构举例
-     * [code type="html"]
+     * 标签切换控件封装
+     * 
+     * 结构举例
+     * 
+     * ```html
      *   <div id="box">
      *       <a>1</a>
      *       <a>2</a>
      *       <a class="js-disabled">3</a>
      *       <a>4</a>
      *   </div>
-     * [/code]
+     * ```
+     * 
      * 脚本举例
-     * [code]
-     *   var _  = NEJ.P,
-     *       _e = _('nej.e'),
-     *       _v = _('nej.v'),
-     *       _p = _('nej.ut');
-     *   
-     *   var _tb = _p._$$Tab._$allocate({
-     *       list:_e._$getChildren(_e._$get('box')),
-     *       index:1,
-     *       onchange:function(_event){
-     *       }
-     *   });
-     *   _tb._$go(2);
-     * [/code]
-     * @class   {nej.ut._$$Tab} 标签切换控件封装
-     * @extends {nej.ut._$$EventTarget}
-     * @param   {Object} 可选配置参数，已处理参数列表如下
-     * @config  {Array}   list     标签项列表
-     * @config  {Number}  index    初始选中项索引值，默认为0
-     * @config  {String}  event    触发选择事件名称，默认为click
-     * @config  {Boolean} inverse  是否反过程，true表示选中时删除选中样式，否则选中时添加样式
-     * @config  {String}  disabled 选项禁用样式，默认为js-disabled
-     * @config  {String}  selected 选中样式名，默认为js-selected
      * 
-     * [hr]
+     * ```javascript
+     * NEJ.define([
+     *     'util/tab/tab'
+     * ],function(_t){
+     *     // 实例化控件
+     *     var _tab = _t._$$Tab._$allocate({
+     *         list:_e._$getChildren(_e._$get('box')),
+     *         index:1,
+     *         onchange:function(_event){
+     *             // TODO
+     *         }
+     *     });
+     *     // 使用控件
+     *     _tab._$go(2);
+     * });
+     * ```
      * 
-     * @event  {onchange} 标签切换事件，输入{last:1,index:5}
-     * @param  {Object} tab信息
-     * @config {Number} last  上一次的tab索引
-     * @config {Number} index 需要切换到的tab索引
-     * @config {Array}  list  节点列表
-     * @config {String} data  节点上通过data-value设置的内容
+     * @class   _$$Tab
+     * @extends _$$EventTarget
      * 
+     * @param    {Object}  config   - 可选配置参数，已处理参数列表如下
+     * @property {Array}   list     - 标签项列表
+     * @property {Number}  index    - 初始选中项索引值，默认为0
+     * @property {String}  event    - 触发选择事件名称，默认为click
+     * @property {Boolean} inverse  - 是否反过程，true表示选中时删除选中样式，否则选中时添加样式
+     * @property {String}  disabled - 选项禁用样式，默认为js-disabled
+     * @property {String}  selected - 选中样式名，默认为js-selected
+     */ 
+    /**
+     * 标签切换事件，输入{last:1,index:5}
+     * 
+     * ```javascript
+     * NEJ.define([
+     *     'util/tab/tab'
+     * ],function(_t){
+     *     // 实例化控件
+     *     var _tab = _t._$$Tab._$allocate({
+     *         list:_e._$getChildren(_e._$get('box')),
+     *         index:1,
+     *         onchange:function(_event){
+     *             // _event.last   上一次的tab索引
+     *             // _event.index  需要切换到的tab索引
+     *             // _event.list   节点列表
+     *             // _event.data   节点上通过data-value设置的内容
+     *             // TODO
+     *         }
+     *     });
+     * });
+     * ```
+     * 
+     * @event    _$$Tab#onchange
+     * @param    {Object}  event   - tab信息
+     * @property {Number}  last    - 上一次的tab索引
+     * @property {Number}  index   - 需要切换到的tab索引
+     * @property {Array}   list    - 节点列表
+     * @property {String}  data    - 节点上通过data-value设置的内容
+     * @property {Boolean} stopped - 是否阻止触发节点的默认事件，回调过程中如果设置为false则后续继续触发节点的默认事件
      */
     _p._$$Tab = NEJ.C();
     _pro = _p._$$Tab._$extend(_p._$$EventTarget);
     /**
      * 控件重置
+     * 
      * @protected
-     * @method {__reset}
-     * @param  {Object} 可选配置参数
+     * @method _$$Tab#__reset
+     * @param  {Object} arg0 - 可选配置参数
      * @return {Void}
      */
     _pro.__reset = function(_options){
@@ -81,8 +108,9 @@ var f = function(){
     };
     /**
      * 控件回收
+     * 
      * @protected
-     * @method {__destroy}
+     * @method _$$Tab#__destroy
      * @return {Void}
      */
     _pro.__destroy = (function(){
@@ -91,8 +119,10 @@ var f = function(){
         };
         return function(){
             this.__supDestroy();
-            _u._$forEach(this.__list,
-                        _doResetSelect,this);
+            _u._$forEach(
+                this.__list,
+                _doResetSelect,this
+            );
             delete this.__list;
             delete this.__name;
             delete this.__index;
@@ -103,9 +133,10 @@ var f = function(){
     })();
     /**
      * 初始化标签列表
+     * 
      * @protected
-     * @method {__doTabListCheck}
-     * @param  {Array} 标签列表
+     * @method _$$Tab#__doTabListCheck
+     * @param  {Array} arg0 - 标签节点列表
      * @return {Void}
      */
     _pro.__doTabListCheck = (function(){
@@ -128,10 +159,11 @@ var f = function(){
     })();
     /**
      * 设置标签选中状态
+     * 
      * @protected
-     * @method {__doTabItemSelect}
-     * @param  {Node}    标签节点
-     * @param  {Boolean} 是否选中
+     * @method _$$Tab#__doTabItemSelect
+     * @param  {Node}    arg0 - 标签节点
+     * @param  {Boolean} arg1 - 是否选中
      * @return {Void}
      */
     _pro.__doTabItemSelect = function(_element,_selected){
@@ -140,27 +172,28 @@ var f = function(){
         : _e._$delClassName(_element,this.__selected);
     };
     /**
-     * 切换到指定索引位置<br />
-     * 脚本举例
-     * [code]
+     * 切换到指定索引位置
+     * 
+     * ```javascript
      *   // 切换到索引为2的位置，如果当前索引为2则不触发回调
-     *   _tb._$go(2);
-     *   // 切换索引为2，如果当前索引为2也触发回调
-     *   _tb._$go(2,true);
-     * [/code]
-     * @method {_$go}
-     * @param  {Number}  索引值
-     * @param  {Boolean} 是否强行回调
-     * @return {nej.ut._$$Tab}
+     *   _tab._$go(2);
+     *   // 切换索引为2，如果当前索引为2也触发onchange回调
+     *   _tab._$go(2,true);
+     * ```
+     * 
+     * @method _$$Tab#_$go
+     * @param  {Number}  arg0 - 索引值
+     * @param  {Boolean} arg1 - 是否强行触发onchange事件
+     * @return {Void}
      */
     _pro._$go = function(_index,_force){
         var _element = this.__list[_index];
         if (_force!=!0&&(_index==this.__index||!_element||
             _e._$hasClassName(_element,this.__disabled))){
             _v._$stopDefault(arguments[1]);
-            return this;
         }
         var _event = {
+            stopped:!0,
             index:_index,
             last:this.__index,
             list:this._$getList(),
@@ -168,75 +201,48 @@ var f = function(){
         };
         this.__index = _index;
         _element = this.__list[_event.last];
-        if (!!_element)
+        if (!!_element){
             this.__doTabItemSelect(_element,!1);
+        }
         _element = this.__list[this.__index];
         this.__doTabItemSelect(_element,!0);
         this._$dispatchEvent('onchange',_event);
-        if (!_event.nostop) _v._$stopDefault(arguments[1]);
-        return this;
+        if (_event.stopped){
+            _v._$stopDefault(arguments[1]);
+        }
     };
     /**
-     * 取当前选中项索引<br />
-     * 脚本举例
-     * [code]
+     * 取当前选中项索引
+     * 
+     * ```javascript
      *   // 获取当前选中的索引
-     *   _tb._$getIndex();
-     * [/code]
-     * @method {_$getIndex}
+     *   var index = _tab._$getIndex();
+     * ```
+     * 
+     * @method _$$Tab#_$getIndex
      * @return {Number} 当前选中项索引
      */
     _pro._$getIndex = function(){
         return this.__index;
     };
     /**
-     * 取Tab控件关联的节点列表<br />
-     * 脚本举例
-     * [code]
+     * 取Tab控件关联的节点列表
+     * 
+     * ```javascript
      *   // 获取关联的节点列表
-     *   _tb._$getList();
-     * [/code]
-     * @method {_$getList}
+     *   _tab._$getList();
+     * ```
+     * 
+     * @method _$$Tab#_$getList
      * @return {Array} 关联的节点列表
      */
     _pro._$getList = function(){
         return this.__list;
     };
-    /**
-     * 将某个父容器下的相关节点构造成一个TAB控件
-     * [code]
-     *    // 构建一个tab控件
-     *    nej.e._$tab('abc',{onchange:function(){}});
-     *    // 调用tab控件接口
-     *    nej.e._$tab('abc')._$go(5);
-     *    // 回收tab控件
-     *    nej.e._$tab('abc')._$recycle();
-     * [/code]
-     * @chainable
-     * @api    {nej.e._$tab}
-     * @param  {String|Node}  TAB控件父容器
-     * @param  {Object}       可选配置参数，参见nej.ut._$$Tab控件的可选配置参数
-     * @config {String} clazz 需要做TAB控件的节点标识，如没有此参数则选取父节点下的所有子节点
-     * @return {nej.ut._$$Tab}
-     */
-    _e._$tab = 
-    _x._$tab = function(_parent,_options){
-        var _id = _e._$id(_parent);
-        if (!_id) return null;
-        if (!_p._$api(_id,_p._$$Tab)){
-            _options = _options||{};
-            _options.list = !_options.clazz
-                          ? _e._$getChildren(_id)
-                          : _e._$getByClassName(_id,_options.clazz);
-            delete _options.clazz;
-        }
-        return _p._$api(_id,_p._$$Tab,_options||_o);
-    };
-    _x.isChange = !0;
-};
-NEJ.define(
-    '{lib}util/tab/tab.js',[
-    '{lib}base/event.js',
-    '{lib}base/element.js',
-    '{lib}util/event.js'
-],f);
+    
+    if (CMPT){
+        NEJ.copy('nej.ut',_p);
+    }
+    
+    return _p;
+});
